made it work with java 17